--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="drone-360" src="./DJI_0946.JPG" crossorigin="anonymous" onerror="log('ERROR: Image failed to load. Check filename.')">
+      <img id="drone-360" src="./DJI_0946_small.JPG" crossorigin="anonymous" onerror="log('ERROR: Image failed to load. Check filename.')">
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
