--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="drone-360" src="./DJI_0946_small.JPG" crossorigin="anonymous">
+      <img id="drone-360" src="./DJI_0946_small2.JPG" crossorigin="anonymous">
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
