--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="drone-360" src="./drone.jpg" crossorigin="anonymous">
+      <img id="drone-360" src="./DJI_0946_small3.JPG" crossorigin="anonymous">
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
