new file:   DJI_0610.JPG 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="drone-360" src="./DJI_0946_small.JPG" crossorigin="anonymous">
+      <img id="drone-360" src=".DJI_0610.JPG" crossorigin="anonymous">
       <a-mixin id="btn-text" text="align: center; color: white; width: 0.9; wrapCount: 15"></a-mixin>
     </a-assets>
 
@@ -185,17 +185,17 @@
 
       <a-entity position="0 -0.4 0">
         
-        <a-entity position="-0.34 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/cv">
+        <a-entity position="-2 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/cv">
           <a-box class="bg-box" width="0.3" height="0.08" depth="0.01" color="#111"></a-box>
           <a-text value="CV" mixin="btn-text" position="0 0 0.01"></a-text>
         </a-entity>
 
-        <a-entity position="0 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/projects">
+        <a-entity position="1 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/projects">
           <a-box class="bg-box" width="0.3" height="0.08" depth="0.01" color="#111"></a-box>
           <a-text value="PROJECTS" mixin="btn-text" position="0 0 0.01"></a-text>
         </a-entity>
 
-        <a-entity position="0.34 0 0" class="clickable" link-handler data-url="https://youtube.com">
+        <a-entity position="0 0 0" class="clickable" link-handler data-url="https://youtube.com">
           <a-box class="bg-box" width="0.3" height="0.08" depth="0.01" color="#111"></a-box>
           <a-text value="VIDEO" mixin="btn-text" position="0 0 0.01"></a-text>
         </a-entity>
