--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="drone-360" src="./DJI_0610_small.JPG" crossorigin="anonymous">
+      <img id="drone-360" src="./dji_fly_20230909_small.JPG" crossorigin="anonymous">
       <a-mixin id="btn-text" text="align: center; color: white; width: 0.9; wrapCount: 15"></a-mixin>
     </a-assets>
 
