new file:   PXL_20250906_164653201.PANO.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     device-orientation-permission-ui="enabled: false">
 
     <a-assets>
-      <img id="drone-360" src="./dji_fly_20230909_small.JPG" crossorigin="anonymous">
+      <img id="drone-360" src="./PXL_20250906_164653201.PANO.jpg" crossorigin="anonymous">
       <a-mixin id="btn-text" text="align: center; color: white; width: 0.9; wrapCount: 15"></a-mixin>
     </a-assets>
 
