modified:   index.html

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               text="align: center; color: white; width: 0.9; wrapCount: 15;
                     font: https://raw.githubusercontent.com/etiennepinchon/aframe-fonts/master/fonts/montserrat/Montserrat-Bold.json;
                     shader: msdf;
-                    negate: false">
+                    negate: true">
       </a-mixin>
     </a-assets>
 
@@ -227,17 +227,17 @@
         
         <a-entity position="0 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/cv">
           <a-box class="bg-box" width="0.3" height="0.08" depth="0.01" color="#111"></a-box>
-          <a-text value="CV" mixin="btn-text" position="0 0 0.01"></a-text>
+          <a-text value="Resume" mixin="btn-text" position="0 0 0.01"></a-text>
         </a-entity>
 
         <a-entity position="0 -0.2 0" class="clickable" link-handler data-url="https://yourwebsite.com/projects">
           <a-box class="bg-box" width="0.3" height="0.08" depth="0.01" color="#111"></a-box>
-          <a-text value="PROJECTS" mixin="btn-text" position="0 0 0.01"></a-text>
+          <a-text value="Projects" mixin="btn-text" position="0 0 0.01"></a-text>
         </a-entity>
 
         <a-entity position="0 -0.4 0" class="clickable" link-handler data-url="https://youtube.com">
           <a-box class="bg-box" width="0.3" height="0.08" depth="0.01" color="#111"></a-box>
-          <a-text value="VIDEO" mixin="btn-text" position="0 0 0.01"></a-text>
+          <a-text value="Drone Videos" mixin="btn-text" position="0 0 0.01"></a-text>
         </a-entity>
 
       </a-entity>
