--- a/index.html
+++ b/index.html
@@ -232,17 +232,17 @@
       <a-entity position="0 -0.4 0">
         
         <a-entity position="0 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/cv">
-          <a-box class="bg-box" width="0.3" mixin="btn-bg"></a-box>
+          <a-box class="bg-box" mixin="btn-bg" geometry="width: 0.3"></a-box>
           <a-text value="Resume" mixin="btn-text" position="0 -0.015 0.011"></a-text>
         </a-entity>
 
         <a-entity position="0 -0.2 0" class="clickable" link-handler data-url="https://yourwebsite.com/projects">
-          <a-box class="bg-box" width="0.5" mixin="btn-bg"></a-box>
+          <a-box class="bg-box" mixin="btn-bg" geometry="width: 0.5"></a-box>
           <a-text value="Projects" mixin="btn-text" position="0 -0.015 0.011"></a-text>
         </a-entity>
 
         <a-entity position="0 -0.4 0" class="clickable" link-handler data-url="https://youtube.com">
-          <a-box class="bg-box" width="0.8" mixin="btn-bg"></a-box>
+          <a-box class="bg-box" mixin="btn-bg" geometry="width: 0.8"></a-box>
           <a-text value="Drone Videos" mixin="btn-text" position="0 -0.015 0.011"></a-text>
         </a-entity>
 
