modified:   index.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </a-mixin>
 
       <a-mixin id="btn-text" 
-             text="align: center; anchor: center; baseline: center; color: white; width: 0.9; wrapCount: 15;
+             text="align: center; anchor: center; baseline: center; color: #000000; width: 0.9; wrapCount: 15;
                    font: https://raw.githubusercontent.com/etiennepinchon/aframe-fonts/master/fonts/montserrat/Montserrat-Bold.json;
                    shader: msdf; negate: true">
       </a-mixin>
@@ -183,19 +183,19 @@
 
       <a-entity position="0 -0.4 0">
         
-        <a-entity position="0 0 0.5" class="clickable" link-handler data-url="https://yourwebsite.com/cv">
+        <a-entity position="0 0 0" class="clickable" link-handler data-url="https://yourwebsite.com/cv">
           <a-entity class="bg-box" mixin="btn-bg" geometry="width: 0.45"></a-entity>
-          <a-text value="Resume" mixin="btn-text" position="0 -0.055 0.011"></a-text>
+          <a-text value="Resume" mixin="btn-text" position="0 -0.055 0.03"></a-text>
         </a-entity>
 
-        <a-entity position="0 -0.15 0.5" class="clickable" link-handler data-url="https://yourwebsite.com/projects">
+        <a-entity position="0 -0.15 0" class="clickable" link-handler data-url="https://yourwebsite.com/projects">
           <a-entity class="bg-box" mixin="btn-bg" geometry="width: 0.5"></a-entity>
-          <a-text value="Projects" mixin="btn-text" position="0 -0.055 0.011"></a-text>
+          <a-text value="Projects" mixin="btn-text" position="0 -0.055 0.03"></a-text>
         </a-entity>
 
-        <a-entity position="0 -0.3 0.5" class="clickable" link-handler data-url="https://youtube.com">
+        <a-entity position="0 -0.3 0" class="clickable" link-handler data-url="https://youtube.com">
           <a-entity class="bg-box" mixin="btn-bg" geometry="width: 0.8"></a-entity>
-          <a-text value="Drone Videos" mixin="btn-text" position="0 -0.055 0.011"></a-text>
+          <a-text value="Drone Videos" mixin="btn-text" position="0 -0.055 0.03"></a-text>
         </a-entity>
 
       </a-entity>
