--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TRON AR - Static Red Illusion</title>
+  <title>TRON AR - Wall Projection</title>
   
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
@@ -30,7 +30,7 @@
   </style>
 
   <script>
-    // --- 1. SHADER (Thinned Lines) ---
+    // --- 1. SHADER ---
     AFRAME.registerShader('spillover-tunnel', {
       schema: { color: {type: 'color', is: 'uniform', default: '#00E5FF'}, time: {type: 'float', is: 'uniform', default: 0.0} },
       vertexShader: `varying vec3 vPos; void main() { vPos = position; gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0); }`,
@@ -44,7 +44,7 @@
           
           float thickness = 0.05 * r; 
           float lineH = step(1.0 - thickness, gridH);
-          float lineV = step(0.98, gridV); // Thin lines
+          float lineV = step(0.98, gridV); 
           
           float gridVal = max(lineH, lineV);
           float inWindowX = step(abs(vPos.x), 0.5); float inWindowY = step(abs(vPos.y), 0.3);
@@ -58,7 +58,7 @@
       `
     });
 
-    // --- 2. CLOCK ---
+    // --- 2. COMPONENTS ---
     AFRAME.registerComponent('shader-clock', {
       tick: function (time, timeDelta) {
         const mesh = this.el.getObject3D('mesh');
@@ -66,7 +66,6 @@
       }
     });
 
-    // --- 3. RED WIREFRAME STYLE ---
     AFRAME.registerComponent('style-red-wireframe', {
       init: function() {
         this.el.addEventListener('model-loaded', () => {
@@ -74,18 +73,11 @@
           if (!object) return;
           const meshes = [];
           object.traverse((node) => { if (node.isMesh) meshes.push(node); });
-
           meshes.forEach((node) => {
-            // Dark Red Solid Base
-            node.material = new THREE.MeshStandardMaterial({
-              color: 0x330000, metalness: 0.6, roughness: 0.4
-            });
-            // Bright Red Wireframe Overlay
+            node.material = new THREE.MeshStandardMaterial({ color: 0x330000, metalness: 0.6, roughness: 0.4 });
             const wireMesh = new THREE.Mesh(
               node.geometry,
-              new THREE.MeshBasicMaterial({
-                color: 0xFF0000, wireframe: true, transparent: true, opacity: 0.8
-              })
+              new THREE.MeshBasicMaterial({ color: 0xFF0000, wireframe: true, transparent: true, opacity: 0.8 })
             );
             node.add(wireMesh);
           });
@@ -93,17 +85,14 @@
       }
     });
 
-    // --- 4. UI LOGIC (Simplified) ---
     AFRAME.registerComponent('ui-logic', {
       init: function() {
-        const btn = document.getElementById('start-btn');
-        btn.addEventListener('click', () => {
+        document.getElementById('start-btn').addEventListener('click', () => {
           document.getElementById('overlay').style.display = 'none';
         });
       }
     });
 
-    // --- 5. INTERACTION ---
     AFRAME.registerComponent('clickable-text', {
       init: function() {
         this.el.addEventListener('click', () => {
@@ -111,11 +100,11 @@
           if(url) window.open(url, '_blank');
         });
         this.el.addEventListener('mouseenter', () => {
-          this.el.setAttribute('scale', '1.2 1.2 1.2');
+          this.el.setAttribute('scale', '1.8 1.8 1.8'); // Adjusted hover scale for larger items
           this.el.querySelector('.text-core').setAttribute('color', '#FFFB00');
         });
         this.el.addEventListener('mouseleave', () => {
-          this.el.setAttribute('scale', '1 1 1');
+          this.el.setAttribute('scale', '1.5 1.5 1.5'); // Return to new base scale
           this.el.querySelector('.text-core').setAttribute('color', '#FFFFFF');
         });
       }
@@ -140,8 +129,7 @@
     <a-assets>
       <a-mixin id="label-font"
                text="font: https://raw.githubusercontent.com/etiennepinchon/aframe-fonts/master/fonts/orbitron/Orbitron-Bold.json; 
-                     shader: msdf; align: center; width: 2.5; negate: true">
-      </a-mixin>
+                     shader: msdf; align: center; width: 4; negate: true"> </a-mixin>
       <a-asset-item id="illusion-model" src="./illusion.glb"></a-asset-item>
     </a-assets>
 
@@ -165,32 +153,32 @@
         id="illusion-obj"
         gltf-model="#illusion-model"
         style-red-wireframe
-        position="0 0 0.04" 
-        scale="0.02 0.02 0.02"> 
+        position="0 0 0.02" 
+        scale="0.025 0.025 0.025"> 
       </a-entity>
 
-      <a-entity position="0 0.45 0.05" class="clickable" clickable-text data-url="https://linkedin.com">
-        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.5" height="0.2"></a-plane>
-        <a-text value="PROFILE" mixin="label-font" color="#00E5FF" opacity="0.5" position="0 0.03 -0.005" scale="1.1 1.1 1"></a-text>
+      <a-entity position="0 0.8 0.2" rotation="45 0 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="https://linkedin.com">
+        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
+        <a-text value="PROFILE" mixin="label-font" color="#00E5FF" opacity="0.5" position="0 0.02 -0.005"></a-text>
         <a-text class="text-core" value="PROFILE" mixin="label-font" color="#FFFFFF"></a-text>
       </a-entity>
 
-      <a-entity position="0 -0.45 0.05" class="clickable" clickable-text data-url="https://github.com">
-        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.5" height="0.2"></a-plane>
-        <a-text value="PROJECTS" mixin="label-font" color="#00E5FF" opacity="0.5" position="0 -0.03 -0.005" scale="1.1 1.1 1"></a-text>
+      <a-entity position="0 -0.8 0.2" rotation="-45 0 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="https://github.com">
+        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
+        <a-text value="PROJECTS" mixin="label-font" color="#00E5FF" opacity="0.5" position="0 -0.02 -0.005"></a-text>
         <a-text class="text-core" value="PROJECTS" mixin="label-font" color="#FFFFFF"></a-text>
       </a-entity>
 
-      <a-entity position="-0.7 0 0.05" class="clickable" clickable-text data-url="mailto:you@email.com">
-        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.4" height="0.2"></a-plane>
-        <a-text value="EMAIL" mixin="label-font" align="right" color="#00E5FF" opacity="0.5" position="-0.03 0 -0.005" scale="1.1 1.1 1"></a-text>
-        <a-text class="text-core" value="EMAIL" mixin="label-font" align="right" color="#FFFFFF"></a-text>
+      <a-entity position="-1 0 0.2" rotation="0 45 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="mailto:you@email.com">
+        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
+        <a-text value="EMAIL" mixin="label-font" align="center" color="#00E5FF" opacity="0.5" position="-0.02 0 -0.005"></a-text>
+        <a-text class="text-core" value="EMAIL" mixin="label-font" align="center" color="#FFFFFF"></a-text>
       </a-entity>
 
-      <a-entity position="0.7 0 0.05" class="clickable" clickable-text data-url="tel:+123456789">
-        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.4" height="0.2"></a-plane>
-        <a-text value="CALL" mixin="label-font" align="left" color="#00E5FF" opacity="0.5" position="0.03 0 -0.005" scale="1.1 1.1 1"></a-text>
-        <a-text class="text-core" value="CALL" mixin="label-font" align="left" color="#FFFFFF"></a-text>
+      <a-entity position="1 0 0.2" rotation="0 -45 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="tel:+123456789">
+        <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
+        <a-text value="CALL" mixin="label-font" align="center" color="#00E5FF" opacity="0.5" position="0.02 0 -0.005"></a-text>
+        <a-text class="text-core" value="CALL" mixin="label-font" align="center" color="#FFFFFF"></a-text>
       </a-entity>
 
     </a-entity>
