--- a/index.html
+++ b/index.html
@@ -154,30 +154,30 @@
         gltf-model="#illusion-model"
         style-red-wireframe
         position="0 0 0.02" 
-        scale="0.025 0.025 0.025"> 
+        scale="0.02 0.02 0.02"> 
       </a-entity>
 
       <a-entity position="0 0.8 0.2" rotation="45 0 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="https://linkedin.com">
         <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
-        <a-text value="PROFILE" mixin="label-font" color="#00E5FF" opacity="0.5" position="0 0.02 -0.005"></a-text>
+        <a-text value="PROFILE" mixin="label-font" color="#AA0000" opacity="0.8" position="0 0.02 -0.005"></a-text>
         <a-text class="text-core" value="PROFILE" mixin="label-font" color="#FFFFFF"></a-text>
       </a-entity>
 
       <a-entity position="0 -0.8 0.2" rotation="-45 0 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="https://github.com">
         <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
-        <a-text value="PROJECTS" mixin="label-font" color="#00E5FF" opacity="0.5" position="0 -0.02 -0.005"></a-text>
+        <a-text value="PROJECTS" mixin="label-font" color="#AA0000" opacity="0.8" position="0 -0.02 -0.005"></a-text>
         <a-text class="text-core" value="PROJECTS" mixin="label-font" color="#FFFFFF"></a-text>
       </a-entity>
 
-      <a-entity position="-1 0 0.2" rotation="0 45 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="mailto:you@email.com">
+      <a-entity position="-0.9 0 0.2" rotation="0 45 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="mailto:you@email.com">
         <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
-        <a-text value="EMAIL" mixin="label-font" align="center" color="#00E5FF" opacity="0.5" position="-0.02 0 -0.005"></a-text>
+        <a-text value="EMAIL" mixin="label-font" align="center" color="#AA0000" opacity="0.8" position="-0.02 0 -0.005"></a-text>
         <a-text class="text-core" value="EMAIL" mixin="label-font" align="center" color="#FFFFFF"></a-text>
       </a-entity>
 
-      <a-entity position="1 0 0.2" rotation="0 -45 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="tel:+123456789">
+      <a-entity position="0.9 0 0.2" rotation="0 -45 0" scale="1.5 1.5 1.5" class="clickable" clickable-text data-url="tel:+123456789">
         <a-plane material="opacity: 0.0; transparent: true; depthWrite: false" width="0.8" height="0.3"></a-plane>
-        <a-text value="CALL" mixin="label-font" align="center" color="#00E5FF" opacity="0.5" position="0.02 0 -0.005"></a-text>
+        <a-text value="CALL" mixin="label-font" align="center" color="#AA0000" opacity="0.8" position="0.02 0 -0.005"></a-text>
         <a-text class="text-core" value="CALL" mixin="label-font" align="center" color="#FFFFFF"></a-text>
       </a-entity>
 
