--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ if (foundTarget !== this.activeTarget) {
             const glow = this.activeTarget.querySelector('.text-glow'); 
             if (glow) { 
                 glow.setAttribute('color', '#B0C4DE'); // Back to Cyan
-                glow.setAttribute('opacity', '0.8');   // Back to dim
+                glow.setAttribute('alphaTest', '0.8');   // Back to dim
             }
           }
 
@@ -294,7 +294,7 @@ if (foundTarget !== this.activeTarget) {
             const glow = foundTarget.querySelector('.text-glow'); 
             if (glow) { 
                 glow.setAttribute('color', '#DD0000'); // Active Red
-                glow.setAttribute('opacity', '1.0');   // Full brightness
+                glow.setAttribute('alphaTest', '1.0');   // Full brightness
             }
             
             // Haptic feedback (Phone vibration)
@@ -333,14 +333,14 @@ if (foundTarget !== this.activeTarget) {
                       align: center; 
                       width: 4; 
                       negate: false; 
-                      alphaTest: 0.6"> </a-mixin>
+                      alphaTest: 0.8"> </a-mixin>
         <a-mixin id="font-glow"
                 text="font: exo2bold; 
                       shader: msdf; 
                       align: center; 
                       width: 4; 
                       negate: false; 
-                      alphaTest: 0.1;  opacity: 0.5">   </a-mixin>
+                      alphaTest: 0.3;  opacity: 0.8">   </a-mixin>
       <a-asset-item id="illusion-model" src="./illusion_swarm.glb"></a-asset-item>
     </a-assets>
 
@@ -369,19 +369,19 @@ if (foundTarget !== this.activeTarget) {
       <a-entity position="0 0.7 0.2" rotation="30 0 0" scale="1.5 1.5 1.5" 
                 class="selectable" data-url="https://ch.linkedin.com/in/aespinel">
         <a-text class="text-core" value="PROFILE" mixin="font-core" align="center" color="#FFFFFF"></a-text>
-        <a-text class="text-glow" value="PROFILE" mixin="font-glow" align="center" color="#B0C4DE" opacity="0.8" position="0 0.02 -0.005"></a-text>
+        <a-text class="text-glow" value="PROFILE" mixin="font-glow" align="center" color="#B0C4DE" position="0 0.02 -0.005"></a-text>
       </a-entity>
 
       <a-entity position="0.8 0 0.2" rotation="0 -30 90" scale="1.5 1.5 1.5"
                 class="selectable" data-url="https://github.com/augusto-espinel">
         <a-text class="text-core" value="PROJECTS" mixin="font-core" align="center" color="#FFFFFF"></a-text>
-        <a-text class="text-glow" value="PROJECTS" mixin="font-glow" align="center" color="#B0C4DE" opacity="0.8" position="0.02 0 -0.005"></a-text>
+        <a-text class="text-glow" value="PROJECTS" mixin="font-glow" align="center" color="#B0C4DE" position="0.02 0 -0.005"></a-text>
       </a-entity>
 
       <a-entity position="-0.8 0 0.2" rotation="0 30 90" scale="1.5 1.5 1.5" 
                 class="selectable" data-url="https://substack.com/@epsilen">
         <a-text class="text-core" value="SUBSTACK" mixin="font-core" align="center" color="#FFFFFF"></a-text>
-        <a-text class="text-glow" value="SUBSTACK" mixin="font-glow" align="center" color="#B0C4DE" opacity="0.8" position="-0.02 0 -0.005"></a-text>
+        <a-text class="text-glow" value="SUBSTACK" mixin="font-glow" align="center" color="#B0C4DE" position="-0.02 0 -0.005"></a-text>
       </a-entity>
 
       <a-entity position="0 -0.7 0.2" rotation="-30 0 0" scale="1.5 1.5 1.5" 
