--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
         float hexDist(vec2 p) { p = abs(p); float c = dot(p, normalize(vec2(1.0, 1.73))); c = max(c, p.x); return c; }
         void main() {
           float r = max(abs(vPos.x), abs(vPos.y)); float a = atan(vPos.y, vPos.x);
-          float z = (1.0 / r) + (time * 0.5); vec2 uv = vec2(a * 3.0, z); 
+          float z = (1.0 / r) + (time * 0.3); vec2 uv = vec2(a * 2.5, z); 
           vec2 rVec = vec2(1.0, 1.73); vec2 h = rVec * 0.5;
           vec2 aMod = mod(uv, rVec) - h; vec2 bMod = mod(uv - h, rVec) - h;
           vec2 gv = dot(aMod, aMod) < dot(bMod, bMod) ? aMod : bMod;
-          float dist = hexDist(gv); float hexLine = smoothstep(0.47, 0.48, dist);
-          float pulseSpeed = time * 0.15; float pulsePos = fract((z * 0.2) + pulseSpeed); 
+          float dist = hexDist(gv); float hexLine = smoothstep(0.48, 0.48, dist);
+          float pulseSpeed = time * 0.1; float pulsePos = fract((z * 0.2) + pulseSpeed); 
           float pulse = smoothstep(0.2, 0.5, pulsePos) * smoothstep(0.8, 0.5, pulsePos);
           vec3 baseLine = color * 1.5; vec3 pulseColor = vec3(0.0, 0.27, 0.45) * 3.0; 
           vec3 finalLineRGB = (baseLine + (pulseColor * pulse)) * hexLine;
           float inWindowX = step(abs(vPos.x), 0.5); float inWindowY = step(abs(vPos.y), 0.3);
           float inWindow = inWindowX * inWindowY; vec3 voidColor = vec3(0.0, 0.0, 0.01); 
           vec3 finalRGB = finalLineRGB + (voidColor * inWindow); float finalAlpha = max(hexLine, inWindow);
-          gl_FragColor = vec4(finalRGB, finalAlpha);
+          gl_FragColor = vec4(finalRGB, finalAlpha*0.6);
         }
       `
     });
